--- a/conf/app.properties
+++ b/conf/app.properties
@@ -5,7 +5,7 @@ project.name=fosun-hsave
 project.port=8080
 #监控类型hsave 或　hquery
 monitor.type=hsave
-hbase.zookeeper.quorum=zk1.data.fomoney.zp,zk2.data.fomoney.zp,zk3.data.fomoney.zp
+hbase.zookeeper.quorum=192.168.71.194,192.168.71.196,192.168.71.198
 #请求fpt-zh，根据WX_OPENID获取fpt_zh(发票通账号)的url
 wx.open.url=http://fosun-zh.service.fomoney.zp:50002/fosun-zh/memberController/getNameByOpenid
 #微信卡券核销接口地址
